[package]
name = "sqlite3-dump"
version = "1.0.0"
authors = ["i64"]
edition = "2021"
description = "SQLite database file parser"
repository = "https://github.com/i64/sqlite3-dump"
readme = "README.md"
keywords = ["sqlite", "database", "dump", "parser"]
license = "Apache-2.0"
categories = ["database", "parser-implementations"]

exclude = [
    "/.github/*"
]

[dependencies]
thiserror = "1.0.38"
memmap2 = { version = "0.5.8", default-features = false }
winnow = { version = "0.7.13", features = ["simd"], default-features = false }
simdutf8 = { version = "0.1.5", default-features = false }
arrow-schema = "56.2.0"
parquet = { version = "56.2.0", features = ["arrow", "arrow-array", "simdutf8", "snap", "zstd"], default-features = false }
arrow = { version = "56.2.0", default-features = false }
ryu = "1.0.20"
itoa = "1.0.15"
ahash = { version = "0.8.12", default-features = false }
argh = { version = "0.1.13", default-features = false, features = ["help"] }
turso_parser = {version = "0.2.2" }
once_cell = "1.21.3"